Upload New Files

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -60,13 +60,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="keywords" content="Linux, tutoriais, dicas, comandos, terminal, distros, open source" />
         <meta name="robots" content="index, follow" />
-        <meta name="description" content="LinuxDicasPro Oficial: tutoriais, dicas e novidades sobre Linux. Aprenda de forma simples e prática a usar o Linux no dia a dia." />
+        <meta name="description" content="LinuxProativo Oficial: tutoriais, dicas e novidades sobre Linux. Aprenda de forma simples e prática a usar o Linux no dia a dia." />
         <link rel="icon" type="image/png" href="/src/assets/lp.png" />
-        <title>LinuxDicasPro Oficial</title>
+        <title>LinuxProativo Oficial</title>
     </head>
     <body>
         <div class="app-conteiner-title">
-            <h1>LinuxDicasPro</h1>
+            <h1>LinuxProativo</h1>
         </div>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
